# sqlfy

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  Makefile  README.md  index.html  install.ps1  install.sh  schemadoc.html  test-drawio.drawio  test-excalidraw.json
app/: .prettierrc  (+10 more)
cli/: README.md  build-binary.sh  core.js  index.js  install.sh  pyinstaller_entry.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  verify.sh
cli/examples/: networkx_example.py
cli/sqlfy-out/cache/: stat-index.json
cli/src/sqlfy/: __init__.py  __main__.py  asker.py  cache.py  clustering.py  config.py  core.py  dialects.py  differ.py  exporter.py  grapher.py  insights.py  main.py  migration_graph.py  models.py  query.py  reconstructor.py  schema_state.py
cli/src/sqlfy/analysis/: __init__.py  asker.py  chunk_cache.py  classifier.py  cost_estimator.py  deps.py  differ.py  domains.py  drift_repair.py  health.py  impact.py  insights.py  integrity.py  lineage.py  linter.py  naming.py  ordering.py  pii_scanner.py  provenance.py  query.py  retriever.py  rollback.py  safety.py  simulator.py  stability.py  validator.py
cli/src/sqlfy/cli/: __init__.py  analysis.py  devtools.py  evolution.py  graph.py  intelligence.py  provenance.py  schema.py
cli/src/sqlfy/commands/: __init__.py  _git_diff.py  _utils.py  ai.py  analysis.py  build_graph.py  devtools.py  evolution.py  export.py  formatters.py  graph.py  graph_cmds.py  impact.py  io.py  provenance.py  query_cmds.py  schema.py
cli/src/sqlfy/contract_gen/: __init__.py  generate_contracts.py
cli/src/sqlfy/contracts/: __init__.py  registry.py
cli/src/sqlfy/domain/: __init__.py  models.py  schema_state.py  sqlglot_compat.py  utils.py
cli/src/sqlfy/graph/: __init__.py  builder.py  clustering.py  migration_graph.py
cli/src/sqlfy/intelligence/: __init__.py  asker.py  chunk_cache.py  chunker.py  retriever.py
cli/src/sqlfy/migrations/: __init__.py  cache.py  loader.py  parser.py
cli/src/sqlfy/output/: __init__.py  chunker.py  drawio_exporter.py  excalidraw_exporter.py  exporter.py  graph_export.py  grapher.py  layout.py
cli/tests/: test_cache.py  test_chunk_cache.py  test_chunker.py  test_classifier.py  test_cli_integration.py  test_clustering.py  test_core.py  test_cost_estimation.py  test_deps.py  test_dialects.py  test_diff_versions.py  test_domains.py  test_drawio_export.py  test_drift_repair.py  test_excalidraw_export.py  test_git_diff.py  test_graph_construction.py  test_graph_export.py  test_health.py  test_impact.py  test_insights.py  test_insights_migrations.py  test_integrity.py  test_layout.py  test_lineage.py  test_linter.py  test_manifest.py  test_migration_graph.py  test_models.py  test_modify_dual_path.py  test_naming.py  test_ordering.py  test_pii_scan.py  test_provenance.py  test_provenance_more.py  test_reconstructor.py  test_rollback.py  test_safety.py  test_schema_state.py  test_simulator.py  (+2 more)
(+160 files in other folders)
