[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sqlfy"
version     = "0.20.0"
description = "Flyway SQL migration parser — schema graph engine and LLM vector chunk builder"
readme      = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=25.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
yaml = ["pyyaml"]
dev = ["pytest>=8"]
# embeddings = ["voyageai"]   # only needed with --embed flag

[project.scripts]
sqlfy = "sqlfy.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlfy", "sqlfy.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "All"
