[build-system]
requires      = ["setuptools>=68", "wheel", "pydantic>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "sqlfy"
version     = "0.20.0"
description = "Flyway SQL migration parser — schema graph engine and LLM vector chunk builder"
readme      = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=25.0.0",
    "networkx>=3.0",
    "sqllineage>=1.5.0",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
]

[project.optional-dependencies]
yaml = ["pyyaml"]
dev = ["pytest>=8", "datamodel-code-generator>=0.25", "pyright>=1.1"]
# embeddings = ["voyageai"]   # only needed with --embed flag

[project.scripts]
sqlfy = "sqlfy.main:main"
sqlfy-ng = "sqlfy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlfy", "sqlfy.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
pythonVersion = "3.14"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
